--- a/api/.env.api
+++ b/api/.env.api
@@ -4,5 +4,9 @@ POSTGRES_USER=root
 POSTGRES_PASSWORD=postgres
 POSTGRES_PORT=2500
 
+RABBIT_USER=admin
+RABBIT_PASSWORD=admin123
+RABBIT_HOST=localhost
+RABBIT_PORT=5672
 
 SECRET_KEY="littlechayanne"
