--- a/broker/Dockerfile.rabbitmq
+++ b/broker/Dockerfile.rabbitmq
@@ -1,5 +1,5 @@
 FROM rabbitmq:3.13.2-management-alpine
 COPY init.sh /usr/local/bin/init.sh
 RUN chmod +x /usr/local/bin/init.sh
-CMD ["init.sh"]
+ENTRYPOINT ["init.sh"]
 
