desacople post y get, todo dockerizado

--- a/api/.env.api
+++ b/api/.env.api
@@ -1,12 +1,13 @@
 POSTGRES_DB=project_hud_db
-POSTGRES_HOST=localhost
+POSTGRES_HOST=project_hub_db
 POSTGRES_USER=root
 POSTGRES_PASSWORD=postgres
-POSTGRES_PORT=2500
+POSTGRES_PORT=5432
 
 RABBIT_USER=admin
 RABBIT_PASSWORD=admin123
-RABBIT_HOST=localhost
+RABBIT_HOST=project_hub_broker
 RABBIT_PORT=5672
 
-SECRET_KEY="littlechayanne"
+SECRET_KEY=littlechayanne
+OVERLAY_HOST=0.0.0.0
