--- a/api/Dockerfile.api.dev
+++ b/api/Dockerfile.api.dev
@@ -1,6 +1,8 @@
 FROM python:3.9
 WORKDIR /app
 COPY requirements.txt requirements.txt
+
+RUN pip install --no-cache-dir --upgrade pip
 RUN pip install --no-cache-dir --upgrade -r ./requirements.txt
 COPY . .
 COPY init.sh /usr/local/bin/init.sh
