--- a/frontend/.env
+++ b/frontend/.env
@@ -1,7 +1,5 @@
 CHOKIDAR_USEPOLLING=true
-
-
-
 # VITE ENV
 VITE_API_URL=http://127.0.0.1:8000
 VITE_BROKER_URL=http://127.0.0.1:2550
+VITE_DEVELOPMENT=false
