--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -1,13 +1,43 @@
-upstream backend {
-    server project_hub_api:2520;
+worker_processes 1;
+
+events {
+    worker_connections 1024;
 }
 
-upstream frontend {
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+    
+    upstream backend_servers {
+        # BACKEND_SERVERS_PLACEHOLDER
+    }
 
-}
+    upstream rabbit_stomp_servers {
+        # RABBIT_STOMP_SERVERS_PLACEHOLDER
+    }
 
-server {
-    listen 80;
-
+    server {
+        listen 8000;
+        location / {
+            proxy_pass http://backend_servers;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+    server {
+        listen 8500;
+        location / {
+            proxy_pass http://rabbit_stomp_upstream;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;    
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
     
 }
