cambios archivo .env y readme

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,12 @@
 CHOKIDAR_USEPOLLING=true
-# VITE ENV
-VITE_API_URL=http://127.0.0.1:8000
-VITE_BROKER_URL=http://127.0.0.1:2550
+
+IP=172.20.10.14
+VITE_API_URL=http://${IP}:8010
+VITE_BROKER_URL=${IP}:8020
 VITE_DEVELOPMENT=false
+
+VITE_RABBITMQ_LOGIN=admin
+VITE_RABBITMQ_PASSCODE=admin123
+
+
+
