--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 FRONTEND_URL=localhost:8080
-BACKEND_SERVERS=project_hub_api_1:8000,project_hub_api:8000
-RABBIT_STOMP_SERVERS=project_hub_broker:15674,project_hub_broker_1:15674
+BACKEND_SERVERS=project_hub_api:8000
+RABBIT_STOMP_SERVERS=project_hub_broker:15674 
