--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -29,7 +29,7 @@ http {
     server {
         listen 8500;
         location / {
-            proxy_pass http://rabbit_stomp_upstream;
+            proxy_pass http://rabbit_stomp_servers;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
